# fand

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
.claude/skills/verify/: SKILL.md
config/: fand.example.toml  test-pwm2-only.toml
crates/: fand-project-plan.md
crates/fanctl/: Cargo.toml
crates/fanctl/src/: main.rs
crates/fand/: Cargo.toml
crates/fand-core/: Cargo.toml
crates/fand-core/src/: channel_edit.rs  config.rs  curve.rs  curve_edit.rs  eval.rs  hysteresis.rs  lib.rs  mix.rs  policy_edit.rs  ramp.rs  smoothing.rs  trigger.rs
crates/fand-proto/: Cargo.toml
crates/fand-proto/src/: client.rs  lib.rs
crates/fand/examples/: mockd.rs
crates/fand/src/: engine.rs  failsafe.rs  hub.rs  hwmon.rs  main.rs  nvml.rs  server.rs
docs/: PLAN.md  REDESIGN.md  RESEARCH.md  RUST_WALKTHROUGH.md
gui/: README.md  index.html  package-lock.json  package.json
gui/src/: App.css  App.tsx  ChannelCard.tsx  TempChart.tsx  index.css  types.ts  useDaemonStatus.ts
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/src/: curves.rs  lib.rs  main.rs  policy.rs  settings.rs  state.rs
gui/src/adw/: Badge.tsx  Banner.tsx  Button.tsx  Card.tsx  Dialog.tsx  StatusPage.tsx  Toast.tsx  icons.tsx  rows.tsx
gui/src/curves/: CurveEditor.tsx  CurvesPage.tsx  scales.ts  useCurveEditor.ts  writes.ts
gui/src/daemon/: eval.ts  types.ts  useDaemonStatus.ts
gui/src/dashboard/: ChannelCard.tsx  CurveCard.tsx  CurveSparkline.tsx  TempChart.tsx
gui/src/dialogs/: AboutDialog.tsx  ChannelPropsDialog.tsx  CurveEditorDialog.tsx  NewCurveDialog.tsx  PreferencesDialog.tsx
gui/src/nav/: Sidebar.tsx
gui/src/settings/: SettingsPage.tsx  useChannelSettings.ts  writes.ts
gui/src/shell/: HeaderBar.tsx  accent.ts  prefs.ts
scripts/: dev.sh  install.sh
systemd/: fand.service
