[workspace]
resolver = "2"
members = [
    "crates/fand-core",
    "crates/fand-proto",
    "crates/fand",
    "crates/fanctl",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
fand-core = { path = "crates/fand-core" }
fand-proto = { path = "crates/fand-proto" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
nvml-wrapper = "0.11"
