[workspace]
resolver = "2"
members = [
    "crates/fand-core",
    "crates/fand-proto",
    "crates/fand",
    "crates/fanctl",
]
# The Tauri backend is deliberately NOT a workspace member: it pulls in
# hundreds of GUI crates, which would slow every daemon-side
# `cargo test/clippy --workspace` to a crawl. It lives in its own tree
# under gui/src-tauri and depends on fand-proto by path.
exclude = ["gui/src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
fand-core = { path = "crates/fand-core" }
fand-proto = { path = "crates/fand-proto" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
nvml-wrapper = "0.11"
signal-hook = "0.3"
tempfile = "3"
