[package]
name = "fand"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
fand-core.workspace = true
fand-proto.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
clap.workspace = true
nvml-wrapper.workspace = true
